Đã giải quyết mọi xung đột